# simplyTranslate

./: .gitignore  CMakeLists.txt  QtBaiduTranslate.pro  QtBaiduTranslate.pro.user.25e2802.4.9-pre1  QtBaiduTranslate.pro.user.4d2c08a  main.cpp  mainStyle.css  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  res.qrc  translatetool.cpp  translatetool.h
src/: main.cpp
src/res/: res.qrc
